--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -65,6 +65,7 @@ jobs:
         azureSubscription: 'iot hub sdk service connection'
         scriptType: 'ps'
         scriptLocation: 'inlineScript'
+        pwsh: true
         inlineScript: |
           $subscriptionId = az account show | jq -r '.id'
           $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup CSharpGateResources -GroupCertificatePassword someCertPass -InstallDependencies
