Update vsts.yaml for Azure Pipelines

--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -59,17 +59,16 @@ jobs:
   - job: DeployCloudTestResources
     pool:
       vmImage: windows-2022
-    steps:
-    - task: AzureCLI@2
+    steps:     
+    - task: AzurePowerShell@5
       inputs:
         azureSubscription: 'iot hub sdk service connection'
-        scriptType: 'ps'
-        scriptLocation: 'inlineScript'
-        pwsh: true
-        inlineScript: |
+        ScriptType: 'InlineScript'
+        Inline: |
           $subscriptionId = az account show | jq -r '.id'
           $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup CSharpGateResources -GroupCertificatePassword someCertPass -InstallDependencies
-          
+        pwsh: true
+
   ### Linux build ###
   - job: LINUX
     displayName: Linux
