Update vsts.yaml for Azure Pipelines

--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -64,10 +64,12 @@ jobs:
       inputs:
         azureSubscription: 'iot hub sdk service connection'
         ScriptType: 'InlineScript'
+        azurePowerShellVersion: 'LatestVersion'
         Inline: |
           $subscriptionId = az account show | jq -r '.id'
           $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup CSharpGateResources -GroupCertificatePassword someCertPass -InstallDependencies
         pwsh: true
+            
 
   ### Linux build ###
   - job: LINUX
