--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -66,6 +66,7 @@ jobs:
         ScriptType: 'InlineScript'
         azurePowerShellVersion: 'LatestVersion'
         Inline: |
+          az login
           $subscriptionId = az account show | jq -r '.id'
           $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup CSharpGateResources -GroupCertificatePassword someCertPass -InstallDependencies
         pwsh: true
