--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -66,9 +66,9 @@ jobs:
         ScriptType: 'InlineScript'
         azurePowerShellVersion: 'LatestVersion'
         Inline: |
-          az login
-          $subscriptionId = az account show | jq -r '.id'
-          $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup CSharpGateResources -GroupCertificatePassword someCertPass -InstallDependencies
+          $azContext = Get-AzContext
+          $subscriptionId = $azContext.Subscription.Id
+          $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup.ps1 -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup CSharpGateResources -GroupCertificatePassword someCertPass -InstallDependencies
         pwsh: true
             
 
