--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -67,8 +67,8 @@ jobs:
         scriptLocation: 'inlineScript'
         pwsh: true
         inlineScript: |
-          $azContext = Get-AzContext
-          $subscriptionId = $azContext.Subscription.Id
+          $jsonContent = az account show | ConvertFrom-Json
+          $subscriptionId = $jsonContent.Id
           $(Build.SourcesDirectory)/e2e/test/prerequisites/E2ETestsSetup/e2eTestsSetup.ps1 -SubscriptionId $subscriptionId -Region westcentralus -ResourceGroup netsdkgate -GroupCertificatePassword someCertPass -InstallDependencies -GenerateResourcesForTestDevOpsPipeline
             
 
