--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -126,7 +126,7 @@ jobs:
             dotnet test
         env:
           # Environment variables for IoT Hub E2E tests
-          IOTHUB_CONNECTION_STRING: $(iotHubConnectionString)
+          IOTHUB_CONNECTION_STRING: $(IOTHUB-CONNECTION-STRING)
           IOTHUB_DEVICE_CONN_STRING: $(IOTHUB-DEVICE-CONN-STRING)
           IOTHUB_X509_DEVICE_PFX_CERTIFICATE: $(IOTHUB-X509-DEVICE-PFX-CERTIFICATE)
           IOTHUB_X509_DEVICE_PFX_THUMBPRINT: $(IOTHUB-X509-DEVICE-PFX-THUMBPRINT)
@@ -138,8 +138,8 @@ jobs:
           IOT_HUB_SAS_KEY_NAME: $(IOTHUB-SAS-KEY-NAME)
 
           # Environment variables for DPS E2E tests
-          DPS_IDSCOPE: $(dpsIdScope)
-          PROVISIONING_CONNECTION_STRING: $(dpsConnectionString)
+          DPS_IDSCOPE: $(DPS-IDSCOPE)
+          PROVISIONING_CONNECTION_STRING: $(PROVISIONING-CONNECTION-STRING)
           DPS_GLOBALDEVICEENDPOINT: global.azure-devices-provisioning.net
           DPS_X509_PFX_CERTIFICATE_PASSWORD: $(DPS-X509-PFX-CERTIFICATE-PASSWORD)
           DPS_X509_GROUP_ENROLLMENT_NAME: $(DPS-X509-GROUP-ENROLLMENT-NAME)
