--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -79,38 +79,38 @@ jobs:
     condition: succeeded()
     timeoutInMinutes: ${{ parameters.jobTimeoutInMinutes }}
     variables:
-      IOTHUB-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-CONNECTION-STRING'] ]
-      IOTHUB-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-DEVICE-CONN-STRING'] ]
-      IOTHUB-X509-DEVICE-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-X509-DEVICE-PFX-CERTIFICATE'] ]
-      IOTHUB-X509-DEVICE-PFX-THUMBPRINT: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-X509-DEVICE-PFX-THUMBPRINT'] ]
-      IOTHUB-X509-CHAIN-DEVICE-NAME: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-X509-CHAIN-DEVICE-NAME'] ]
-      IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE'] ]
-      IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID'] ]
-      IOT-HUB-SAS-KEY: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-SAS-KEY'] ]
-      IOT-HUB-SAS-KEY-NAME: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-SAS-KEY-NAME'] ]
-      DPS-IDSCOPE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.DPS-IDSCOPE'] ]
-      PROVISIONING-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.PROVISIONING-CONNECTION-STRING'] ]
+      IOTHUB-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-CONNECTION-STRING'] ]
+      IOTHUB-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-DEVICE-CONN-STRING'] ]
+      IOTHUB-X509-DEVICE-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-DEVICE-PFX-CERTIFICATE'] ]
+      IOTHUB-X509-DEVICE-PFX-THUMBPRINT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-DEVICE-PFX-THUMBPRINT'] ]
+      IOTHUB-X509-CHAIN-DEVICE-NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-CHAIN-DEVICE-NAME'] ]
+      IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE'] ]
+      IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID'] ]
+      IOT-HUB-SAS-KEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-SAS-KEY'] ]
+      IOT-HUB-SAS-KEY-NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-SAS-KEY-NAME'] ]
+      DPS-IDSCOPE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-IDSCOPE'] ]
+      PROVISIONING-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PROVISIONING-CONNECTION-STRING'] ]
       DPS-GLOBALDEVICEENDPOINT: global.azure-devices-provisioning.net
-      DPS-X509-PFX-CERTIFICATE-PASSWORD: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.DPS-X509-PFX-CERTIFICATE-PASSWORD'] ]
-      DPS-X509-GROUP-ENROLLMENT-NAME: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.DPS-X509-GROUP-ENROLLMENT-NAME'] ]
-      X509-CHAIN-ROOT-CA-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.X509-CHAIN-ROOT-CA-CERTIFICATE'] ]
-      X509-CHAIN-INTERMEDIATE1-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.X509-CHAIN-INTERMEDIATE1-CERTIFICATE'] ]
-      X509-CHAIN-INTERMEDIATE2-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.X509-CHAIN-INTERMEDIATE2-CERTIFICATE'] ]
-      X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE'] ]
-      STORAGE-ACCOUNT-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.STORAGE-ACCOUNT-CONNECTION-STRING'] ]
-      MSFT-TENANT-ID: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.MSFT-TENANT-ID'] ]
-      E2E-TEST-AAD-APP-CLIENT-ID: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.E2E-TEST-AAD-APP-CLIENT-ID'] ]
-      E2E-TEST-AAD-APP-CLIENT-SECRET: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.E2E-TEST-AAD-APP-CLIENT-SECRET'] ]
-      E2E-IKEY: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.E2E-IKEY'] ]
-      #IOTHUB-DEVICE-CONN-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-DEVICE-CONN-STRING-INVALIDCERT'] ]
-      #IOTHUB-CONN-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.IOTHUB-CONN-STRING-INVALIDCERT'] ]
-      #DPS-GLOBALDEVICEENDPOINT-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.DPS-GLOBALDEVICEENDPOINT-INVALIDCERT'] ]
-      #PROVISIONING-CONNECTION-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.PROVISIONING-CONNECTION-STRING-INVALIDCERT'] ]
-      PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE'] ]
-      PNP-TC-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.PNP-TC-DEVICE-CONN-STRING'] ]
-      PNP-THERMOSTAT-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.PNP-THERMOSTAT-DEVICE-CONN-STRING'] ]
-      DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID'] ]
-      DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY: $[ dependencies.DeployCloudTestResources.outputs['setvarStep.DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY'] ]
+      DPS-X509-PFX-CERTIFICATE-PASSWORD: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-X509-PFX-CERTIFICATE-PASSWORD'] ]
+      DPS-X509-GROUP-ENROLLMENT-NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-X509-GROUP-ENROLLMENT-NAME'] ]
+      X509-CHAIN-ROOT-CA-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-ROOT-CA-CERTIFICATE'] ]
+      X509-CHAIN-INTERMEDIATE1-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-INTERMEDIATE1-CERTIFICATE'] ]
+      X509-CHAIN-INTERMEDIATE2-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-INTERMEDIATE2-CERTIFICATE'] ]
+      X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE'] ]
+      STORAGE-ACCOUNT-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.STORAGE-ACCOUNT-CONNECTION-STRING'] ]
+      MSFT-TENANT-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.MSFT-TENANT-ID'] ]
+      E2E-TEST-AAD-APP-CLIENT-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E-TEST-AAD-APP-CLIENT-ID'] ]
+      E2E-TEST-AAD-APP-CLIENT-SECRET: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E-TEST-AAD-APP-CLIENT-SECRET'] ]
+      E2E-IKEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E-IKEY'] ]
+      #IOTHUB-DEVICE-CONN-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-DEVICE-CONN-STRING-INVALIDCERT'] ]
+      #IOTHUB-CONN-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-CONN-STRING-INVALIDCERT'] ]
+      #DPS-GLOBALDEVICEENDPOINT-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-GLOBALDEVICEENDPOINT-INVALIDCERT'] ]
+      #PROVISIONING-CONNECTION-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PROVISIONING-CONNECTION-STRING-INVALIDCERT'] ]
+      PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE'] ]
+      PNP-TC-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PNP-TC-DEVICE-CONN-STRING'] ]
+      PNP-THERMOSTAT-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PNP-THERMOSTAT-DEVICE-CONN-STRING'] ]
+      DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID'] ]
+      DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY'] ]
     strategy:
       maxParallel: ${{ parameters.maxParallelJobs }}
       matrix:
