--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -79,38 +79,38 @@ jobs:
     condition: succeeded()
     timeoutInMinutes: ${{ parameters.jobTimeoutInMinutes }}
     variables:
-      IOTHUB-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-CONNECTION-STRING'] ]
-      IOTHUB-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-DEVICE-CONN-STRING'] ]
-      IOTHUB-X509-DEVICE-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-DEVICE-PFX-CERTIFICATE'] ]
-      IOTHUB-X509-DEVICE-PFX-THUMBPRINT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-DEVICE-PFX-THUMBPRINT'] ]
-      IOTHUB-X509-CHAIN-DEVICE-NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-CHAIN-DEVICE-NAME'] ]
-      IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE'] ]
-      IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID'] ]
-      IOT-HUB-SAS-KEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-SAS-KEY'] ]
-      IOT-HUB-SAS-KEY-NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-SAS-KEY-NAME'] ]
-      DPS-IDSCOPE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-IDSCOPE'] ]
-      PROVISIONING-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PROVISIONING-CONNECTION-STRING'] ]
-      DPS-GLOBALDEVICEENDPOINT: global.azure-devices-provisioning.net
-      DPS-X509-PFX-CERTIFICATE-PASSWORD: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-X509-PFX-CERTIFICATE-PASSWORD'] ]
-      DPS-X509-GROUP-ENROLLMENT-NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-X509-GROUP-ENROLLMENT-NAME'] ]
-      X509-CHAIN-ROOT-CA-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-ROOT-CA-CERTIFICATE'] ]
-      X509-CHAIN-INTERMEDIATE1-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-INTERMEDIATE1-CERTIFICATE'] ]
-      X509-CHAIN-INTERMEDIATE2-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-INTERMEDIATE2-CERTIFICATE'] ]
-      X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE'] ]
-      STORAGE-ACCOUNT-CONNECTION-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.STORAGE-ACCOUNT-CONNECTION-STRING'] ]
-      MSFT-TENANT-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.MSFT-TENANT-ID'] ]
-      E2E-TEST-AAD-APP-CLIENT-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E-TEST-AAD-APP-CLIENT-ID'] ]
-      E2E-TEST-AAD-APP-CLIENT-SECRET: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E-TEST-AAD-APP-CLIENT-SECRET'] ]
-      E2E-IKEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E-IKEY'] ]
-      #IOTHUB-DEVICE-CONN-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-DEVICE-CONN-STRING-INVALIDCERT'] ]
-      #IOTHUB-CONN-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB-CONN-STRING-INVALIDCERT'] ]
-      #DPS-GLOBALDEVICEENDPOINT-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-GLOBALDEVICEENDPOINT-INVALIDCERT'] ]
-      #PROVISIONING-CONNECTION-STRING-INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PROVISIONING-CONNECTION-STRING-INVALIDCERT'] ]
-      PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE'] ]
-      PNP-TC-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PNP-TC-DEVICE-CONN-STRING'] ]
-      PNP-THERMOSTAT-DEVICE-CONN-STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PNP-THERMOSTAT-DEVICE-CONN-STRING'] ]
-      DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID'] ]
-      DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY'] ]
+      IOTHUB_CONNECTION_STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_CONNECTION_STRING'] ]
+      IOTHUB_DEVICE_CONN_STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_DEVICE_CONN_STRING'] ]
+      IOTHUB_X509_DEVICE_PFX_CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_X509_DEVICE_PFX_CERTIFICATE'] ]
+      IOTHUB_X509_DEVICE_PFX_THUMBPRINT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_X509_DEVICE_PFX_THUMBPRINT'] ]
+      IOTHUB_X509_CHAIN_DEVICE_NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_X509_CHAIN_DEVICE_NAME'] ]
+      IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE'] ]
+      IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID'] ]
+      IOT_HUB_SAS_KEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_SAS_KEY'] ]
+      IOT_HUB_SAS_KEY_NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_SAS_KEY_NAME'] ]
+      DPS_IDSCOPE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS_IDSCOPE'] ]
+      PROVISIONING_CONNECTION_STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PROVISIONING_CONNECTION_STRING'] ]
+      DPS_GLOBALDEVICEENDPOINT: global.azure_devices_provisioning.net
+      DPS_X509_PFX_CERTIFICATE_PASSWORD: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS_X509_PFX_CERTIFICATE_PASSWORD'] ]
+      DPS_X509_GROUP_ENROLLMENT_NAME: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS_X509_GROUP_ENROLLMENT_NAME'] ]
+      X509_CHAIN_ROOT_CA_CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509_CHAIN_ROOT_CA_CERTIFICATE'] ]
+      X509_CHAIN_INTERMEDIATE1_CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509_CHAIN_INTERMEDIATE1_CERTIFICATE'] ]
+      X509_CHAIN_INTERMEDIATE2_CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509_CHAIN_INTERMEDIATE2_CERTIFICATE'] ]
+      X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE'] ]
+      STORAGE_ACCOUNT_CONNECTION_STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.STORAGE_ACCOUNT_CONNECTION_STRING'] ]
+      MSFT_TENANT_ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.MSFT_TENANT_ID'] ]
+      E2E_TEST_AAD_APP_CLIENT_ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E_TEST_AAD_APP_CLIENT_ID'] ]
+      E2E_TEST_AAD_APP_CLIENT_SECRET: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E_TEST_AAD_APP_CLIENT_SECRET'] ]
+      E2E_IKEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.E2E_IKEY'] ]
+      #IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_DEVICE_CONN_STRING_INVALIDCERT'] ]
+      #IOTHUB_CONN_STRING_INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.IOTHUB_CONN_STRING_INVALIDCERT'] ]
+      #DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS_GLOBALDEVICEENDPOINT_INVALIDCERT'] ]
+      #PROVISIONING_CONNECTION_STRING_INVALIDCERT: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PROVISIONING_CONNECTION_STRING_INVALIDCERT'] ]
+      PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE'] ]
+      PNP_TC_DEVICE_CONN_STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PNP_TC_DEVICE_CONN_STRING'] ]
+      PNP_THERMOSTAT_DEVICE_CONN_STRING: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.PNP_THERMOSTAT_DEVICE_CONN_STRING'] ]
+      DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID'] ]
+      DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY: $[ dependencies.DeployCloudTestResources.outputs['OutputVars.DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY'] ]
     strategy:
       maxParallel: ${{ parameters.maxParallelJobs }}
       matrix:
@@ -156,34 +156,34 @@ jobs:
             dotnet test
         env:
           # Environment variables for IoT Hub E2E tests
-          IOTHUB_CONNECTION_STRING: $IOTHUB-CONNECTION-STRING
-          IOTHUB_DEVICE_CONN_STRING: $IOTHUB-DEVICE-CONN-STRING
-          IOTHUB_X509_DEVICE_PFX_CERTIFICATE: $IOTHUB-X509-DEVICE-PFX-CERTIFICATE
-          IOTHUB_X509_DEVICE_PFX_THUMBPRINT: $IOTHUB-X509-DEVICE-PFX-THUMBPRINT
+          IOTHUB_CONNECTION_STRING: $IOTHUB_CONNECTION_STRING
+          IOTHUB_DEVICE_CONN_STRING: $IOTHUB_DEVICE_CONN_STRING
+          IOTHUB_X509_DEVICE_PFX_CERTIFICATE: $IOTHUB_X509_DEVICE_PFX_CERTIFICATE
+          IOTHUB_X509_DEVICE_PFX_THUMBPRINT: $IOTHUB_X509_DEVICE_PFX_THUMBPRINT
 
-          IOTHUB_X509_CHAIN_DEVICE_NAME: $IOTHUB-X509-CHAIN-DEVICE-NAME
-          IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE: $IOTHUB-X509-CHAIN-DEVICE-PFX-CERTIFICATE
-          IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID: $IOTHUB-USER-ASSIGNED-MSI-RESOURCE-ID
-          IOT_HUB_SAS_KEY: $IOTHUB-SAS-KEY
-          IOT_HUB_SAS_KEY_NAME: $IOTHUB-SAS-KEY-NAME
+          IOTHUB_X509_CHAIN_DEVICE_NAME: $IOTHUB_X509_CHAIN_DEVICE_NAME
+          IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE: $IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE
+          IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID: $IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID
+          IOT_HUB_SAS_KEY: $IOTHUB_SAS_KEY
+          IOT_HUB_SAS_KEY_NAME: $IOTHUB_SAS_KEY_NAME
 
           # Environment variables for DPS E2E tests
-          DPS_IDSCOPE: $DPS-IDSCOPE
-          PROVISIONING_CONNECTION_STRING: $PROVISIONING-CONNECTION-STRING
-          DPS_GLOBALDEVICEENDPOINT: global.azure-devices-provisioning.net
-          DPS_X509_PFX_CERTIFICATE_PASSWORD: $DPS-X509-PFX-CERTIFICATE-PASSWORD
-          DPS_X509_GROUP_ENROLLMENT_NAME: $DPS-X509-GROUP-ENROLLMENT-NAME
+          DPS_IDSCOPE: $DPS_IDSCOPE
+          PROVISIONING_CONNECTION_STRING: $PROVISIONING_CONNECTION_STRING
+          DPS_GLOBALDEVICEENDPOINT: global.azure_devices_provisioning.net
+          DPS_X509_PFX_CERTIFICATE_PASSWORD: $DPS_X509_PFX_CERTIFICATE_PASSWORD
+          DPS_X509_GROUP_ENROLLMENT_NAME: $DPS_X509_GROUP_ENROLLMENT_NAME
 
           # Environment variables for Azure resources used for E2E tests (common)
-          X509_CHAIN_ROOT_CA_CERTIFICATE: $X509-CHAIN-ROOT-CA-CERTIFICATE
-          X509_CHAIN_INTERMEDIATE1_CERTIFICATE: $X509-CHAIN-INTERMEDIATE1-CERTIFICATE
-          X509_CHAIN_INTERMEDIATE2_CERTIFICATE: $X509-CHAIN-INTERMEDIATE2-CERTIFICATE
-          X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE: $X509-CHAIN-INTERMEDIATE2-PFX-CERTIFICATE
-          STORAGE_ACCOUNT_CONNECTION_STRING: $STORAGE-ACCOUNT-CONNECTION-STRING
-          MSFT_TENANT_ID: $MSFT-TENANT-ID
-          E2E_TEST_AAD_APP_CLIENT_ID: $E2E-TEST-AAD-APP-CLIENT-ID
-          E2E_TEST_AAD_APP_CLIENT_SECRET: $E2E-TEST-AAD-APP-CLIENT-SECRET
-          E2E_IKEY: $E2E-IKEY
+          X509_CHAIN_ROOT_CA_CERTIFICATE: $X509_CHAIN_ROOT_CA_CERTIFICATE
+          X509_CHAIN_INTERMEDIATE1_CERTIFICATE: $X509_CHAIN_INTERMEDIATE1_CERTIFICATE
+          X509_CHAIN_INTERMEDIATE2_CERTIFICATE: $X509_CHAIN_INTERMEDIATE2_CERTIFICATE
+          X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE: $X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE
+          STORAGE_ACCOUNT_CONNECTION_STRING: $STORAGE_ACCOUNT_CONNECTION_STRING
+          MSFT_TENANT_ID: $MSFT_TENANT_ID
+          E2E_TEST_AAD_APP_CLIENT_ID: $E2E_TEST_AAD_APP_CLIENT_ID
+          E2E_TEST_AAD_APP_CLIENT_SECRET: $E2E_TEST_AAD_APP_CLIENT_SECRET
+          E2E_IKEY: $E2E_IKEY
 
           # Environment variables for the DevOps pipeline
           #PROXY_SERVER_ADDRESS: 127.0.0.1:8888
@@ -191,22 +191,22 @@ jobs:
           FRAMEWORK: $FRAMEWORK
 
           # Environment variables for invalid certificate tests
-          #IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $IOTHUB-DEVICE-CONN-STRING-INVALIDCERT
-          #IOTHUB_CONN_STRING_INVALIDCERT: $IOTHUB-CONN-STRING-INVALIDCERT
-          #DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $DPS-GLOBALDEVICEENDPOINT-INVALIDCERT
-          #PROVISIONING_CONNECTION_STRING_INVALIDCERT: $PROVISIONING-CONNECTION-STRING-INVALIDCERT
+          #IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $IOTHUB_DEVICE_CONN_STRING_INVALIDCERT
+          #IOTHUB_CONN_STRING_INVALIDCERT: $IOTHUB_CONN_STRING_INVALIDCERT
+          #DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $DPS_GLOBALDEVICEENDPOINT_INVALIDCERT
+          #PROVISIONING_CONNECTION_STRING_INVALIDCERT: $PROVISIONING_CONNECTION_STRING_INVALIDCERT
 
           # Environment variables used by Log Analytics Workspace for Azure Security Center
-          #LA_AAD_APP_ID: $LA-AAD-APP-ID
-          #LA_AAD_APP_CERT_BASE64: $LA-AAD-APP-CERT-BASE64
-          #LA_WORKSPACE_ID: $LA-WORKSPACE-ID
+          #LA_AAD_APP_ID: $LA_AAD_APP_ID
+          #LA_AAD_APP_CERT_BASE64: $LA_AAD_APP_CERT_BASE64
+          #LA_WORKSPACE_ID: $LA_WORKSPACE_ID
 
           # Environment variable for running samples/cleanups
-          PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE: $PATH-TO-DEVICE-PREFIX-FOR-DELETION-FILE
-          PNP_TC_DEVICE_CONN_STRING: $PNP-TC-DEVICE-CONN-STRING
-          PNP_THERMOSTAT_DEVICE_CONN_STRING: $PNP-THERMOSTAT-DEVICE-CONN-STRING
-          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID: $DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLMENT-REGISTRATION-ID
-          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY: $DPS-SYMMETRIC-KEY-INDIVIDUAL-ENROLLEMNT-PRIMARY-KEY
+          PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE: $PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE
+          PNP_TC_DEVICE_CONN_STRING: $PNP_TC_DEVICE_CONN_STRING
+          PNP_THERMOSTAT_DEVICE_CONN_STRING: $PNP_THERMOSTAT_DEVICE_CONN_STRING
+          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID: $DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID)
+          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY: $DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY)
             
 
       - task: PublishTestResults@2
