--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -152,61 +152,61 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            Write-Host $IOTHUB-CONNECTION-STRING $IOTHUB_CONNECTION_STRING
+            Write-Host $(IOTHUB_CONNECTION_STRING)
             dotnet test
         env:
           # Environment variables for IoT Hub E2E tests
-          IOTHUB_CONNECTION_STRING: $IOTHUB_CONNECTION_STRING
-          IOTHUB_DEVICE_CONN_STRING: $IOTHUB_DEVICE_CONN_STRING
-          IOTHUB_X509_DEVICE_PFX_CERTIFICATE: $IOTHUB_X509_DEVICE_PFX_CERTIFICATE
-          IOTHUB_X509_DEVICE_PFX_THUMBPRINT: $IOTHUB_X509_DEVICE_PFX_THUMBPRINT
+          IOTHUB_CONNECTION_STRING: $(IOTHUB_CONNECTION_STRING)
+          IOTHUB_DEVICE_CONN_STRING: $(IOTHUB_DEVICE_CONN_STRING)
+          IOTHUB_X509_DEVICE_PFX_CERTIFICATE: $(IOTHUB_X509_DEVICE_PFX_CERTIFICATE)
+          IOTHUB_X509_DEVICE_PFX_THUMBPRINT: $(IOTHUB_X509_DEVICE_PFX_THUMBPRINT)
 
-          IOTHUB_X509_CHAIN_DEVICE_NAME: $IOTHUB_X509_CHAIN_DEVICE_NAME
-          IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE: $IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE
-          IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID: $IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID
-          IOT_HUB_SAS_KEY: $IOTHUB_SAS_KEY
-          IOT_HUB_SAS_KEY_NAME: $IOTHUB_SAS_KEY_NAME
+          IOTHUB_X509_CHAIN_DEVICE_NAME: $(IOTHUB_X509_CHAIN_DEVICE_NAME)
+          IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE: $(IOTHUB_X509_CHAIN_DEVICE_PFX_CERTIFICATE)
+          IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID: $(IOTHUB_USER_ASSIGNED_MSI_RESOURCE_ID)
+          IOT_HUB_SAS_KEY: $(IOTHUB_SAS_KEY)
+          IOT_HUB_SAS_KEY_NAME: $(IOTHUB_SAS_KEY_NAME)
 
           # Environment variables for DPS E2E tests
-          DPS_IDSCOPE: $DPS_IDSCOPE
-          PROVISIONING_CONNECTION_STRING: $PROVISIONING_CONNECTION_STRING
-          DPS_GLOBALDEVICEENDPOINT: global.azure_devices_provisioning.net
-          DPS_X509_PFX_CERTIFICATE_PASSWORD: $DPS_X509_PFX_CERTIFICATE_PASSWORD
-          DPS_X509_GROUP_ENROLLMENT_NAME: $DPS_X509_GROUP_ENROLLMENT_NAME
+          DPS_IDSCOPE: $(DPS_IDSCOPE)
+          PROVISIONING_CONNECTION_STRING: $(PROVISIONING_CONNECTION_STRING)
+          DPS_GLOBALDEVICEENDPOINT: global.azure_devices_provisioning.net)
+          DPS_X509_PFX_CERTIFICATE_PASSWORD: $(DPS_X509_PFX_CERTIFICATE_PASSWORD)
+          DPS_X509_GROUP_ENROLLMENT_NAME: $(DPS_X509_GROUP_ENROLLMENT_NAME)
 
           # Environment variables for Azure resources used for E2E tests (common)
-          X509_CHAIN_ROOT_CA_CERTIFICATE: $X509_CHAIN_ROOT_CA_CERTIFICATE
-          X509_CHAIN_INTERMEDIATE1_CERTIFICATE: $X509_CHAIN_INTERMEDIATE1_CERTIFICATE
-          X509_CHAIN_INTERMEDIATE2_CERTIFICATE: $X509_CHAIN_INTERMEDIATE2_CERTIFICATE
-          X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE: $X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE
-          STORAGE_ACCOUNT_CONNECTION_STRING: $STORAGE_ACCOUNT_CONNECTION_STRING
-          MSFT_TENANT_ID: $MSFT_TENANT_ID
-          E2E_TEST_AAD_APP_CLIENT_ID: $E2E_TEST_AAD_APP_CLIENT_ID
-          E2E_TEST_AAD_APP_CLIENT_SECRET: $E2E_TEST_AAD_APP_CLIENT_SECRET
-          E2E_IKEY: $E2E_IKEY
+          X509_CHAIN_ROOT_CA_CERTIFICATE: $(X509_CHAIN_ROOT_CA_CERTIFICATE)
+          X509_CHAIN_INTERMEDIATE1_CERTIFICATE: $(X509_CHAIN_INTERMEDIATE1_CERTIFICATE)
+          X509_CHAIN_INTERMEDIATE2_CERTIFICATE: $(X509_CHAIN_INTERMEDIATE2_CERTIFICATE)
+          X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE: $(X509_CHAIN_INTERMEDIATE2_PFX_CERTIFICATE)
+          STORAGE_ACCOUNT_CONNECTION_STRING: $(STORAGE_ACCOUNT_CONNECTION_STRING)
+          MSFT_TENANT_ID: $(MSFT_TENANT_ID)
+          E2E_TEST_AAD_APP_CLIENT_ID: $(E2E_TEST_AAD_APP_CLIENT_ID)
+          E2E_TEST_AAD_APP_CLIENT_SECRET: $(E2E_TEST_AAD_APP_CLIENT_SECRET)
+          E2E_IKEY: $(E2E_IKEY)
 
           # Environment variables for the DevOps pipeline
           #PROXY_SERVER_ADDRESS: 127.0.0.1:8888
-          TARGET_BRANCH: $System.PullRequest.TargetBranch
-          FRAMEWORK: $FRAMEWORK
+          TARGET_BRANCH: $((System.PullRequest.TargetBranch)
+          FRAMEWORK: $(FRAMEWORK)
 
           # Environment variables for invalid certificate tests
-          #IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $IOTHUB_DEVICE_CONN_STRING_INVALIDCERT
-          #IOTHUB_CONN_STRING_INVALIDCERT: $IOTHUB_CONN_STRING_INVALIDCERT
-          #DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $DPS_GLOBALDEVICEENDPOINT_INVALIDCERT
-          #PROVISIONING_CONNECTION_STRING_INVALIDCERT: $PROVISIONING_CONNECTION_STRING_INVALIDCERT
+          #IOTHUB_DEVICE_CONN_STRING_INVALIDCERT: $(IOTHUB_DEVICE_CONN_STRING_INVALIDCERT)
+          #IOTHUB_CONN_STRING_INVALIDCERT: $(IOTHUB_CONN_STRING_INVALIDCERT)
+          #DPS_GLOBALDEVICEENDPOINT_INVALIDCERT: $(DPS_GLOBALDEVICEENDPOINT_INVALIDCERT)
+          #PROVISIONING_CONNECTION_STRING_INVALIDCERT: $(PROVISIONING_CONNECTION_STRING_INVALIDCERT)
 
           # Environment variables used by Log Analytics Workspace for Azure Security Center
-          #LA_AAD_APP_ID: $LA_AAD_APP_ID
-          #LA_AAD_APP_CERT_BASE64: $LA_AAD_APP_CERT_BASE64
-          #LA_WORKSPACE_ID: $LA_WORKSPACE_ID
+          #LA_AAD_APP_ID: $(LA_AAD_APP_ID)
+          #LA_AAD_APP_CERT_BASE64: $(LA_AAD_APP_CERT_BASE64)
+          #LA_WORKSPACE_ID: $(LA_WORKSPACE_ID)
 
           # Environment variable for running samples/cleanups
-          PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE: $PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE
-          PNP_TC_DEVICE_CONN_STRING: $PNP_TC_DEVICE_CONN_STRING
-          PNP_THERMOSTAT_DEVICE_CONN_STRING: $PNP_THERMOSTAT_DEVICE_CONN_STRING
-          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID: $DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID)
-          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY: $DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY)
+          PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE: $(PATH_TO_DEVICE_PREFIX_FOR_DELETION_FILE)
+          PNP_TC_DEVICE_CONN_STRING: $(PNP_TC_DEVICE_CONN_STRING)
+          PNP_THERMOSTAT_DEVICE_CONN_STRING: $(PNP_THERMOSTAT_DEVICE_CONN_STRING)
+          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID: $(DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLMENT_REGISTRATION_ID)
+          DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY: $(DPS_SYMMETRIC_KEY_INDIVIDUAL_ENROLLEMNT_PRIMARY_KEY)
             
 
       - task: PublishTestResults@2
