--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -152,7 +152,7 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            Write-Host $(IOTHUB_CONNECTION_STRING)
+            Write-Host "conn string?" $(IOTHUB_CONNECTION_STRING)
             dotnet test
         env:
           # Environment variables for IoT Hub E2E tests
